--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Our Product <b class=""></b></a>
               <ul class="dropdown-menu">
                 <li><a href="http://foo.bar/" onclick="window.open('customers.html','_self')">For Customers</a></li>
-                <li><a href="http://foo.bar/" onclick="window.open('stakeholders.html','_self')">For Stakeholders</a></li>
+                <!--<li><a href="http://foo.bar/" onclick="window.open('stakeholders.html','_self')">For Stakeholders</a></li>-->
               </ul>
             </li>
           </ul>
