--- a/customers.html
+++ b/customers.html
@@ -10,7 +10,7 @@
     <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/icon" href="assets/images/LOGO2.png" />
+    <link rel="shortcut icon" type="image/icon" href="assets/images/parklogo.png" />
     <!-- Font Awesome -->
     <link href="assets/css/font-awesome.css" rel="stylesheet">
     <!-- Bootstrap -->
