--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Parking Hero</a>
+          <a class="navbar-brand" href="#"><img src="assets/images/logo.png" style="height:10px;width:10px;" alt="logo">Parking Hero</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -81,7 +81,7 @@
             <li><a href="#features"><i class="fa fa-server"></i><span>Features</span></a></li>
             <li><a href="#howit-works"><i class="fa fa-hourglass"></i><span>How it Works</span></a></li>
             <li><a href="#team"><i class="fa fa-group"></i><span>Team</span></a></li>
-            <li><a href="#screenshot"><i class="fa fa-image"></i><span>Screenshots</span></a></li>
+            <li><a href="#screenshot"><i class="fa fa-image"></i><span>App Interfaces</span></a></li>
             <li><a href="#download-app"><i class="fa fa-download"></i><span>Download</span></a></li>
             <li><a href="#contact"><i class="fa fa-envelope-o"></i><span>Contact</span></a></li>
             <li class="dropdown">
@@ -133,7 +133,7 @@
                     <div class="col-md-6 col-sm-6">
                       <div class="header-bottom-left">
 					  
-                        <h1>Parking Hero</h1>
+                        <h1>Parking experience redefined!</h1>
                         <p>Choose from millions of available spaces, or reserve your space in advance. Join over 2.5
                           million drivers enjoying easy parking.</p>
                         <!--<a class="download-btn" href="#">Download App</a>-->
@@ -576,7 +576,7 @@
       <div class="row">
         <div class="col-md-12">
           <div class="title-area wow fadeInUp">
-            <h2 class="title">User <span>Interfaces</span></h2>
+            <h2 class="title">App <span>Interfaces</span></h2>
             <p></p>
           </div>
         </div>
