--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#"><img src="assets/images/parklogo.png" style="height:10px;width:10px;" alt="logo">Parking Hero</a>
+          <img src="assets/images/parklogo.png" style="height:30px;width:30px;" alt="logo"><a class="navbar-brand" href="#">Parking Hero</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
