--- a/index.html
+++ b/index.html
@@ -134,8 +134,7 @@
                       <div class="header-bottom-left">
 					  
                         <h1>Parking experience redefined!</h1>
-                        <p>Choose from millions of available spaces, or reserve your space in advance. Join over 2.5
-                          million drivers enjoying easy parking.</p>
+                        <p>Life is too short to waste on parking.</p>
                         <!--<a class="download-btn" href="#">Download App</a>-->
                       </div>
                     </div>
