--- a/index.html
+++ b/index.html
@@ -844,7 +844,7 @@
                 </li>
               </ul>
             </div>
-            <div class="footer-copyright text-center py-3 copyright">Copyright © 2019 
+            <div style="color:#008080;" class="footer-copyright text-center py-3 copyright">Copyright © 2019 
                 <a href="https://www.linkedin.com/in/parking-hero-254728189/">Parking Hero</a>, All rights reserved
               </div>
           </div>
