--- a/index.html
+++ b/index.html
@@ -735,6 +735,17 @@
         <ul class="row " id="team-cards">
           <li class="col-12 col-md-4 col-lg-4">
               <div class="cnt-block equal-hight" >
+                <figure><img src="assets/images/IMG_20170202_120249.jpg" class="img-responsive" alt=""></figure>
+                <h3>Anuj</h3>
+                <p>Graphic Designer</p>
+                <ul class="follow-us clearfix">
+                  <li><a href="https://github.com/43215-Anuj"><i class="fa fa-github" aria-hidden="true"></i></a></li>
+                  <li><a href="https://www.linkedin.com/in/anuj-kumar-b85099158/"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                </ul>
+              </div>
+          </li>
+	 <li class="col-12 col-md-4 col-lg-4">
+              <div class="cnt-block equal-hight" >
                 <figure><img src="assets/images/anuj.jpg" class="img-responsive" alt=""></figure>
                 <h3>Anuj</h3>
                 <p>Graphic Designer</p>
