--- a/index.html
+++ b/index.html
@@ -736,7 +736,7 @@
           <li class="col-12 col-md-4 col-lg-4">
               <div class="cnt-block equal-hight" >
                 <figure><img src="assets/images/IMG_20170202_120249.jpg" class="img-responsive" alt=""></figure>
-                <h3>Anuj</h3>
+                <h3>Pooja Garg</h3>
                 <p>Graphic Designer</p>
                 <ul class="follow-us clearfix">
                   <li><a href="https://github.com/43215-Anuj"><i class="fa fa-github" aria-hidden="true"></i></a></li>
