--- a/customers.html
+++ b/customers.html
@@ -66,25 +66,25 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="index.html">Parking Hero</a>
+                    <a class="navbar-brand" href="index.html"><img src="assets/images/parklogo.png"></a>
                 </div>
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="#aa-about-us"><i class="fa fa-book"></i><span>About Us</span></a></li>
-                        <li><a href="#features"><i class="fa fa-server"></i><span>Features</span></a></li>
-                        <li><a href="#howit-works"><i class="fa fa-hourglass"></i><span>How it Works</span></a></li>
-                        <li><a href="#team"><i class="fa fa-usd"></i><span>Team</span></a></li>
-                        <li><a href="#screenshot"><i class="fa fa-image"></i><span>Screenshots</span></a></li>
-                        <li><a href="#download-app"><i class="fa fa-download"></i><span>Download</span></a></li>
-                        <li><a href="#contact"><i class="fa fa-envelope-o"></i><span>Contact</span></a></li>
+                        <li><a href="index.html#aa-about-us"><i class="fa fa-book"></i><span>About Us</span></a></li>
+                        <li><a href="index.html#features"><i class="fa fa-server"></i><span>Features</span></a></li>
+                        <li><a href="index.html#howit-works"><i class="fa fa-hourglass"></i><span>How it Works</span></a></li>
+                        <li><a href="index.html#team"><i class="fa fa-group"></i><span>Team</span></a></li>
+                        <li><a href="index.html#screenshot"><i class="fa fa-image"></i><span>Screenshots</span></a></li>
+                        <li><a href="index.html#download-app"><i class="fa fa-download"></i><span>Download</span></a></li>
+                        <li><a href="index.html#contact"><i class="fa fa-envelope-o"></i><span>Contact</span></a></li>
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Our Product <b
                                     class="caret"></b></a>
                             <ul class="dropdown-menu">
                                 <li><a href="#">For Customers</a></li>
-                                <li><a href="stakeholders.html"> For Stakeholders</a></li>
+                                <!--<li><a href="stakeholders.html"> For Stakeholders</a></li>-->
                             </ul>
                         </li>
                     </ul>
@@ -109,20 +109,16 @@
             <div class="aa-about-us-area">
                 <div class="row">
                     <div class="col-md-12">
-
-                        <div class="wow fadeInLeft" data-wow-duration="0.5s" data-wow-delay="0.5s">
-                            <div class="aa-title">
-                                <h2 class="title" style="margin-top: 20px;">For <span>Customers</span></h2>
-
-                            </div>
+                        <div class="title-area wow text-center fadeInLeft">
+                          <h2 class="title">For  <span>Customers</span></h2>
                         </div>
-                    </div>
+                      </div>
                 </div>
                 <div class="row about-us-content">
                     <div class=" col-xs-12  ">
                         <div class="content wow fadeInLeft" data-wow-duration="0.5s" data-wow-delay="0.5s">
 
-                            <div class="mySlides  ">
+                            <div class="mySlides text-center ">
                                 <div class="col-xs-12 col-sm-12 col-md-6">
                                     <p style="padding-top: 50px;">
                                         <h2>Feature No. 1</h2>
@@ -144,7 +140,7 @@
 
 
                             </div>
-                            <div class="mySlides  ">
+                            <div class="mySlides text-center ">
                                 <div class="col-xs-12 col-sm-12 col-md-6">
                                     <p style="padding-top: 50px;">
                                         <h2>Feature No. 2</h2>
@@ -169,7 +165,7 @@
                             </div>
 
 
-                            <div class="mySlides  ">
+                            <div class="mySlides  text-center">
                                 <div class="col-xs-12 col-sm-12 col-md-6">
                                     <p style="padding-top: 50px;">
                                         <h2>Feature No. 3</h2>
@@ -211,7 +207,7 @@
 
     <!-- Start footer -->
     <footer id="footer">
-        <div class="container">
+        <div class="container-fluid">
             <div class="row">
                 <div class="col-md-12">
                     <div class="footer-social">
@@ -237,9 +233,9 @@
                                 </li>
                             </ul>
                         </div>
-                        <div class="footer-copyright text-center py-3 copyright">Copyright © 2019
+                        <div class="footer-copyright text-center py-3 copyright"><p>Copyright © 2019
                             <a href="https://www.linkedin.com/in/parking-hero-254728189/">Parking Hero</a>, All rights
-                            reserved
+                            reserved</p>
                         </div>
                     </div>
 
