--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
                       <i class="fa fa-support"></i>
                       <div class="features-content">
                         <h4>24/7 Support</h4>
-                        <p>Suppport at every minute</p>
+                        <p>Suppport provided at every minute</p>
                       </div>
                     </li>
                   </ul>
