--- a/index.html
+++ b/index.html
@@ -852,11 +852,11 @@
               </ul>
             </div>
 		  <div class="title-area title mailto">
-                  <h3>Mail us at: <a href="mailto:contact@theparkinghero.com">contact@theparkinghero.com</a></h3>
+                  <h3>Mail us at: <a style="color:#008080;" href="mailto:contact@theparkinghero.com">contact@theparkinghero.com</a></h3>
                   
                 
             <div class="footer-copyright text-center py-3">Copyright © 2019 
-                <a href="https://www.linkedin.com/in/parking-hero-254728189/">Parking Hero</a>, All rights reserved
+                <a style="color:#008080;" href="https://www.linkedin.com/in/parking-hero-254728189/">Parking Hero</a>, All rights reserved
               </div>
 			  </div>
           </div>
