--- a/customers.html
+++ b/customers.html
@@ -66,8 +66,9 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="index.html"><img src="assets/images/parklogo.png"></a>
-                </div>
+                    <a class="navbar-brand" href="index.html">
+                        <img src="assets/images/parklogo.png" style="max-height:150%;max-width:150%;" alt="logo">
+                      </a>                </div>
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -76,7 +77,7 @@
                         <li><a href="index.html#features"><i class="fa fa-server"></i><span>Features</span></a></li>
                         <li><a href="index.html#howit-works"><i class="fa fa-hourglass"></i><span>How it Works</span></a></li>
                         <li><a href="index.html#team"><i class="fa fa-group"></i><span>Team</span></a></li>
-                        <li><a href="index.html#screenshot"><i class="fa fa-image"></i><span>Screenshots</span></a></li>
+                        <li><a href="index.html#screenshot"><i class="fa fa-image"></i><span>App Interfaces</span></a></li>
                         <li><a href="index.html#download-app"><i class="fa fa-download"></i><span>Download</span></a></li>
                         <li><a href="index.html#contact"><i class="fa fa-envelope-o"></i><span>Contact</span></a></li>
                         <li class="dropdown">
@@ -233,7 +234,8 @@
                                 </li>
                             </ul>
                         </div>
-                        <div class="footer-copyright text-center py-3 copyright"><p>Copyright © 2019
+                        <div class="footer-copyright text-center py-3 copyright"><p>Mail us at: <a href="mailto:contact@theparkinghero.com">contact@theparkinghero.com</a></p>
+                            <p>Copyright © 2019
                             <a href="https://www.linkedin.com/in/parking-hero-254728189/">Parking Hero</a>, All rights
                             reserved</p>
                         </div>
