--- a/index.html
+++ b/index.html
@@ -71,9 +71,8 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">
-            <img src="assets/images/parklogo.png" style="max-height:150%;max-width:150%;" alt="logo">
-          </a>
+          <img src="assets/images/parklogo.png" style="height:50px;width:50px;" alt="logo"><a class="navbar-brand" href="#">Parking Hero</a>
+
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
