--- a/customers.html
+++ b/customers.html
@@ -66,7 +66,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <img src="assets/images/parklogo.png" style="height:50px;width:50px;" alt="logo"><a class="navbar-brand" href="#">Parking Hero</a>
+                    <img src="assets/images/parklogo.png" style="height:50px;width:50px;" alt="logo"><a class="navbar-brand" href="index.html">Parking Hero</a>
                 </div>
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
@@ -206,46 +206,43 @@
     </section>
 
     <!-- Start footer -->
-    <footer id="footer">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="footer-social">
-                        <div class="title-area">
-                            <h2 class="title">Follow <span>Us</span></h2>
-                            <p></p>
-                        </div>
-                        <div class="social-container">
-                            <ul class="social-icons">
-
-                                <li><a href="https://www.instagram.com/theparkinghero"><i
-                                            class="fa fa-instagram"></i></a></li>
-                                <li><a href="https://www.twitter.com/hero_parking"><i class="fa fa-twitter"></i></a>
-                                </li>
-                                <li><a href="https://www.facebook.com/Parking-Hero-479676936166352/"><i
-                                            class="fa fa-facebook"></i></a>
-                                </li>
-                                <li><a href="https://www.youtube.com/channel/UCXAGtCPg3csUljx0WpjTqsw"><i
-                                            class="fa fa-youtube"></i></a>
-                                </li>
-                                <li><a href="https://www.linkedin.com/in/parking-hero-254728189/"><i
-                                            class="fa fa-linkedin"></i></a>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="footer-copyright text-center py-3 copyright"><p>Mail us at: <a href="mailto:contact@theparkinghero.com">contact@theparkinghero.com</a></p>
-                            <p>Copyright © 2019
-                            <a href="https://www.linkedin.com/in/parking-hero-254728189/">Parking Hero</a>, All rights
-                            reserved</p>
-                        </div>
-                    </div>
-
-
-                </div>
+  <footer id="footer">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="footer-social">
+            <div class="title-area">
+              <h2 class="title">Follow <span>Us</span></h2>
             </div>
+
+            <div class="social-container">
+              <ul class="social-icons">
+
+                <li><a href="https://www.instagram.com/theparkinghero"><i class="fa fa-instagram"></i></a></li>
+                <li><a href="https://www.twitter.com/hero_parking"><i class="fa fa-twitter"></i></a>
+                </li>
+                <li><a href="https://www.facebook.com/Parking-Hero-479676936166352/"><i class="fa fa-facebook"></i></a>
+                </li>
+                <li><a href="https://www.youtube.com/channel/UCXAGtCPg3csUljx0WpjTqsw"><i class="fa fa-youtube"></i></a>
+                </li>
+                <li><a href="https://www.linkedin.com/in/parking-hero-254728189/"><i class="fa fa-linkedin"></i></a>
+                </li>
+              </ul>
+            </div>
+            <div class="footer-copyright text-center py-3 copyright">
+              <p>Mail us at: <a href="mailto:contact@theparkinghero.com">contact@theparkinghero.com</a></p>
+              <p>Copyright © 2019
+                <a href="https://www.linkedin.com/in/parking-hero-254728189/">Parking Hero</a>, All rights
+                reserved</p>
+            </div>
+          </div>
+
+
         </div>
-    </footer>
-    <!-- End -->
+      </div>
+    </div>
+  </footer>
+  <!-- End -->
 
 
     <!-- jQuery library -->
